--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@stripe/stripe-js": "^1.52.1",
     "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.4.0",
     "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.4.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^3.5.0-alpha.4",
     "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.4.0",
     "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.4.0",
     "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.4.0",
@@ -52,7 +53,6 @@
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
     "sanity": "^3.14.2",
-    "sanity-plugin-asset-source-openai": "^1.1.2",
     "sanity-plugin-iframe-pane": "^2.3.0",
     "sanity-plugin-media": "^2.0.5",
     "sass": "^1.62.1",
