--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   "dependencies": {
     "@portabletext/react": "^3.0.0",
     "@sanity/code-input": "^4.1.1",
-    "@sanity/icons": "^2.3.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3.11.3",
-    "@sanity/ui": "1.7.4",
     "@sanity/vision": "^3.11.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
@@ -60,7 +58,7 @@
     "sharp": "^0.32.0",
     "split-pane-react": "^0.1.3",
     "stripe": "^12.7.0",
-    "styled-components": "6.0.7",
+    "styled-components": "^5.3.11",
     "swiper": "9.3.2"
   },
   "devDependencies": {
