--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "update:custom": "echo 'Enter custom tag: 👇' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.1",
     "@portabletext/react": "^3.0.0",
     "@sanity/code-input": "^4.1.1",
     "@sanity/icons": "^2.3.1",
