--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.1",
     "@portabletext/react": "^3.0.0",
     "@sanity/code-input": "^4.1.1",
     "@sanity/icons": "^2.3.1",
@@ -46,7 +45,6 @@
     "nanoid": "^3.1.30",
     "next": "^13.4.4",
     "next-sanity": "4.3.3",
-    "next-seo": "^6.0.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -60,7 +58,7 @@
     "split-pane-react": "^0.1.3",
     "stripe": "^12.7.0",
     "styled-components": "6.0.7",
-    "swiper": "9.3.2"
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "4.37.2",
