--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
+    "analyze": "ANALYZE=true yarn build",
     "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag"
   },
   "dependencies": {
@@ -41,9 +42,9 @@
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "marked": "^4.3.0",
-    "nanoid": "^3.1.30",
-    "next": "^13.4.4",
+    "marked": "^9.0.3",
+    "nanoid": "^5.0.1",
+    "next": "13.5.1",
     "next-sanity": "4.3.3",
     "next-seo": "^6.0.0",
     "polished": "^4.2.2",
@@ -51,27 +52,30 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3.14.2",
-    "sanity-plugin-iframe-pane": "^2.3.0",
+    "sanity": "^3.16.7",
+    "sanity-plugin-iframe-pane": "^2.5.7",
     "sanity-plugin-media": "^2.0.5",
-    "sass": "^1.62.1",
-    "sharp": "^0.32.0",
+    "sass": "^1.67.0",
+    "sharp": "^0.32.6",
     "split-pane-react": "^0.1.3",
     "stripe": "^12.7.0",
-    "styled-components": "6.0.7",
+    "styled-components": "6.0.8",
     "swiper": "9.3.2"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "4.37.2",
-    "@types/react": "^18.2.0",
+    "@next/bundle-analyzer": "^13.5.2",
+    "@types/node": "^20.6.3",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.39.0",
-    "eslint-config-next": "^13.4.4",
-    "next-sitemap": "^4.1.8",
-    "postcss": "^8.4.23",
+    "eslint": "^8.49.0",
+    "eslint-config-next": "^13.5.1",
+    "next-sitemap": "^4.2.3",
+    "postcss": "^8.4.30",
     "prettier": "^3.0.3",
     "tailwindcss": "^3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.2.2"
   }
 }
