--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "lodash": "^4.17.21",
     "marked": "^4.3.0",
     "nanoid": "^3.1.30",
-    "next": "^13.5.4",
+    "next": "13.4.19",
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
