--- a/package.json
+++ b/package.json
@@ -17,22 +17,22 @@
     "@sanity/code-input": "^4.1.1",
     "@sanity/icons": "^2.4.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/types": "^3.16.7",
+    "@sanity/types": "^3.17.0",
     "@sanity/ui": "^1.8.2",
-    "@sanity/vision": "^3.16.7",
+    "@sanity/vision": "^3.17.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.6.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.6.0",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.6.1",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.6.1",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
@@ -50,14 +50,14 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-toast": "^1.0.3",
-    "sanity": "^3.16.7",
+    "sanity": "^3.17.0",
     "sanity-plugin-iframe-pane": "^2.5.7",
     "sanity-plugin-media": "^2.2.2",
     "sass": "^1.62.1",
     "sharp": "^0.32.0",
     "split-pane-react": "^0.1.3",
     "stripe": "^12.7.0",
-    "styled-components": "6.0.7",
+    "styled-components": "^5.2",
     "swiper": "^10.2.0"
   },
   "devDependencies": {
