--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
+    "deepmerge": "^4.3.1",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
