--- a/package.json
+++ b/package.json
@@ -71,14 +71,15 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.40.1",
-    "@storybook/addon-docs": "^7.6.3",
-    "@storybook/addon-essentials": "^7.5.2",
-    "@storybook/addon-interactions": "^7.5.2",
-    "@storybook/addon-links": "^7.5.2",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.5.2",
-    "@storybook/nextjs": "^7.5.2",
-    "@storybook/react": "^7.5.2",
+    "@storybook/addon-docs": "^7.6.5",
+    "@storybook/addon-essentials": "^7.6.5",
+    "@storybook/addon-interactions": "^7.6.5",
+    "@storybook/addon-links": "^7.6.5",
+    "@storybook/addon-mdx-gfm": "^7.6.5",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.5",
+    "@storybook/nextjs": "^7.6.5",
+    "@storybook/react": "^7.6.5",
     "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.2.0",
     "@types/vhtml": "^2.2.4",
@@ -90,7 +91,7 @@
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
-    "storybook": "^7.5.2",
+    "storybook": "^7.6.5",
     "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
   },
