--- a/package.json
+++ b/package.json
@@ -22,17 +22,17 @@
     "@sanity/vision": "^3.17.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.6.3",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.6.3",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.6.4-rc.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.6.4-rc.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
