--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start",
-    "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag"
+    "update:tag": "echo 'Enter custom tag: 👇 (eg: latest, next, your-own-tag)' && read ctag && yarn add @webriq-pagebuilder/sanity-plugin-input-component-gpt3@$ctag @webriq-pagebuilder/sanity-plugin-input-component-variants@$ctag @webriq-pagebuilder/sanity-plugin-schema-blog@$ctag @webriq-pagebuilder/sanity-plugin-schema-commerce@$ctag @webriq-pagebuilder/sanity-plugin-schema-default@$ctag @webriq-pagebuilder/sanity-plugin-webriq-blog@$ctag @webriq-pagebuilder/sanity-plugin-webriq-components@$ctag @webriq-pagebuilder/sanity-plugin-webriq-forms@$ctag @webriq-pagebuilder/sanity-plugin-webriq-payments@$ctag @webriq-pagebuilder/sanity-plugin-desk-studio-version@$ctag @webriq-pagebuilder/sanity-plugin-inspector-inline-edit@$ctag @webriq-pagebuilder/sanity-plugin-input-component-social-accounts@$ctag"
   },
   "dependencies": {
     "@portabletext/react": "^3.0.9",
@@ -22,17 +22,18 @@
     "@sanity/vision": "^3.17.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.7.1-rc.6",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.7.1-rc.6",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-input-component-social-accounts": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.7.1-rc.7",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.7.1-rc.7",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "cors": "^2.8.5",
