--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "marked": "^4.3.0",
+    "msw-storybook-addon": "1.8.0",
     "nanoid": "^3.1.30",
     "next": "13.4.19",
     "next-sanity": "4.3.3",
@@ -91,6 +92,7 @@
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.4.4",
     "eslint-plugin-storybook": "^0.6.15",
+    "msw": "1.3.2",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
@@ -99,5 +101,8 @@
     "typescript": "5.0.4"
   },
   "readme": "ERROR: No README data found!",
-  "_id": "@webriq-pagebuilder/site-template-default@3.6.3"
+  "_id": "@webriq-pagebuilder/site-template-default@3.6.3",
+  "msw": {
+    "workerDirectory": "public"
+  }
 }
