--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "chromatic": "npx chromatic --project-token=chpt_68d919151b3e677"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@portabletext/react": "^3.0.9",
     "@sanity/code-input": "^4.1.1",
     "@sanity/icons": "^2.4.1",
@@ -47,6 +50,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.24.0",
     "deepmerge": "^4.3.1",
+    "framer-motion": "^11.0.3",
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -72,6 +76,7 @@
     "tailwind-merge": "^2.0.0"
   },
   "devDependencies": {
+    "@chakra-ui/storybook-addon": "^5.1.0",
     "@netlify/plugin-nextjs": "^4.40.1",
     "@storybook/addon-docs": "^7.6.5",
     "@storybook/addon-essentials": "^7.6.5",
