--- a/package.json
+++ b/package.json
@@ -29,17 +29,17 @@
     "@sanity/vision": "^3.17.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "3.7.1-alpha.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
@@ -99,10 +99,5 @@
     "storybook": "^7.6.5",
     "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
-  },
-  "readme": "ERROR: No README data found!",
-  "_id": "@webriq-pagebuilder/site-template-default@3.7.0",
-  "msw": {
-    "workerDirectory": "public"
   }
 }
