--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@webriq-pagebuilder/site-template-default",
-  "version": "3.7.0",
+  "version": "4.0.0",
   "private": true,
   "license": "MIT",
   "author": {
@@ -29,17 +29,17 @@
     "@sanity/vision": "^3.17.0",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
-    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-blog": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-schema-default": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-components": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "3.7.1-alpha.0",
-    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "3.7.1-alpha.0",
+    "@webriq-pagebuilder/sanity-plugin-desk-studio-version": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-gpt3": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-input-component-variants": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-inspector-inline-edit": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-blog": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-commerce": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-schema-default": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-blog": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-components": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-forms": "^4.0.0",
+    "@webriq-pagebuilder/sanity-plugin-webriq-payments": "^4.0.0",
     "axios": "^1.3.6",
     "braille": "^1.1.0",
     "clsx": "^2.0.0",
