--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "history": "^5.3.0",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
+    "magicast": "^0.3.3",
     "marked": "^4.3.0",
     "msw-storybook-addon": "1.8.0",
     "nanoid": "^3.1.30",
@@ -69,7 +70,8 @@
     "stripe": "^12.7.0",
     "styled-components": "^5.2",
     "swiper": "^10.2.0",
-    "tailwind-merge": "^2.0.0"
+    "tailwind-merge": "^2.0.0",
+    "ts-dedent": "^2.2.0"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
