--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,30 +1,36 @@
-# Name of our action
 name: "Chromatic"
-# The event that will trigger the action
+
 on: push
 
-# What the action will do
 jobs:
   test:
-    # The operating system it will run on
     runs-on: ubuntu-latest
-    # The list of steps that the action will go through
     steps:
       - uses: actions/checkout@v2
         with:
-          #👇 Fetches all history so Chromatic can compare against previous builds
           fetch-depth: 0
+
+      - name: Use Node.js cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.npm
+            **/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - uses: actions/setup-node@v3
         with:
-          #👇 Sets the version of Node.js to use
           node-version: 18
+          cache: 'yarn'
+
       - run: yarn
-        #👇 Adds Chromatic as a step in the workflow
+
       - uses: chromaui/action@v1
-        # Options required for Chromatic's GitHub Action
         with:
-          #👇 Chromatic projectToken, see https://storybook.js.org/tutorials/design-systems-for-developers/react/en/review/ to obtain it
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GITHUB_TOKEN }}
         env:
+          STORYBOOK_SANITY_PROJECT_ID: ${{ secrets.STORYBOOK_SANITY_PROJECT_ID }}
           STORYBOOK_SANITY_DATASET: ${{ secrets.STORYBOOK_SANITY_DATASET }}
