--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "marked": "^4.3.0",
     "msw-storybook-addon": "1.8.0",
     "nanoid": "^3.1.30",
-    "next": "13.4.19",
+    "next": "^14.1.0",
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
@@ -92,7 +92,7 @@
     "autoprefixer": "^10.4.15",
     "chromatic": "^7.6.0",
     "eslint": "^8.39.0",
-    "eslint-config-next": "^13.4.4",
+    "eslint-config-next": "^14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
     "msw": "1.3.2",
     "next-sitemap": "^4.2.2",
