--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -1,6 +1,10 @@
 name: "Chromatic"
 
-on: push
+on:
+  pull_request:
+    branches:
+      - master
+      - main
 
 jobs:
   test:
@@ -27,7 +31,7 @@ jobs:
 
       - run: yarn
 
-      - uses: chromaui/action@v1
+      - uses: chromaui/action@latest
         with:
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -35,3 +39,4 @@ jobs:
         env:
           STORYBOOK_SANITY_PROJECT_ID: ${{ secrets.STORYBOOK_SANITY_PROJECT_ID }}
           STORYBOOK_SANITY_DATASET: ${{ secrets.STORYBOOK_SANITY_DATASET }}
+          STORYBOOK_SANITY_API_READ_TOKEN: ${{ secrets.STORYBOOK_SANITY_API_READ_TOKEN }}
