--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -40,3 +40,4 @@ jobs:
           STORYBOOK_SANITY_PROJECT_ID: ${{ secrets.STORYBOOK_SANITY_PROJECT_ID }}
           STORYBOOK_SANITY_DATASET: ${{ secrets.STORYBOOK_SANITY_DATASET }}
           STORYBOOK_SANITY_API_READ_TOKEN: ${{ secrets.STORYBOOK_SANITY_API_READ_TOKEN }}
+          STORYBOOK_SANITY_STUDIO_IN_CSTUDIO: ${{ secrets.STORYBOOK_SANITY_STUDIO_IN_CSTUDIO }}
