--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "lodash": "^4.17.21",
     "magicast": "^0.3.3",
     "marked": "^12.0.0",
-    "msw-storybook-addon": "1.10.0",
+    "msw-storybook-addon": "1.8.0",
     "nanoid": "^5.0.6",
-    "next": "^14.1.2",
-    "next-sanity": "^8.1.3",
+    "next": "13.4.19",
+    "next-sanity": "5.4.5",
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -65,7 +65,7 @@
     "react-toast": "^1.0.3",
     "sanity": "^3.31.0",
     "sanity-plugin-iframe-pane": "2.5.8",
-    "sanity-plugin-media": "^2.2.5",
+    "sanity-plugin-media": "2.2.2",
     "sass": "^1.71.1",
     "sharp": "^0.33.2",
     "split-pane-react": "^0.1.3",
@@ -77,29 +77,30 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
-    "@storybook/addon-docs": "^8.0.0-beta.6",
-    "@storybook/addon-essentials": "^8.0.0-beta.6",
-    "@storybook/addon-interactions": "^8.0.0-beta.6",
-    "@storybook/addon-links": "^8.0.0-beta.6",
-    "@storybook/addon-mdx-gfm": "^8.0.0-beta.6",
-    "@storybook/addon-onboarding": "^8.0.0-beta.6",
-    "@storybook/blocks": "^8.0.0-beta.6",
-    "@storybook/manager-api": "^8.0.0-beta.6",
-    "@storybook/nextjs": "^8.0.0-beta.6",
-    "@storybook/react": "^8.0.0-beta.6",
-    "@storybook/theming": "^8.0.0-beta.6",
+    "@storybook/addon-docs": "^7.6.5",
+    "@storybook/addon-essentials": "^7.6.5",
+    "@storybook/addon-interactions": "^7.6.5",
+    "@storybook/addon-links": "^7.6.5",
+    "@storybook/addon-mdx-gfm": "^7.6.5",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.5",
+    "@storybook/manager-api": "^7.6.8",
+    "@storybook/nextjs": "^7.6.5",
+    "@storybook/react": "^7.6.5",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^7.6.8",
     "@types/react": "^18.2.62",
     "@types/vhtml": "^2.2.9",
     "autoprefixer": "^10.4.18",
-    "chromatic": "^11.0.0",
+    "chromatic": "^7.6.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.2",
-    "eslint-plugin-storybook": "^0.8.0",
+    "eslint-config-next": "^13.4.19",
+    "eslint-plugin-storybook": "^0.6.15",
     "msw": "1.3.2",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
-    "storybook": "^8.0.0-beta.6",
+    "storybook": "^7.6.5",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   }
