--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "marked": "^4.3.0",
     "msw-storybook-addon": "1.8.0",
     "nanoid": "^3.1.30",
-    "next": "^14.1.0",
+    "next": "13.4.19",
     "next-sanity": "4.3.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
@@ -76,29 +76,30 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.41.3",
-    "@storybook/addon-docs": "^8.0.0-beta.6",
-    "@storybook/addon-essentials": "^8.0.0-beta.6",
-    "@storybook/addon-interactions": "^8.0.0-beta.6",
-    "@storybook/addon-links": "^8.0.0-beta.6",
-    "@storybook/addon-mdx-gfm": "^8.0.0-beta.6",
-    "@storybook/addon-onboarding": "^8.0.0-beta.6",
-    "@storybook/blocks": "^8.0.0-beta.6",
-    "@storybook/manager-api": "^8.0.0-beta.6",
-    "@storybook/nextjs": "^8.0.0-beta.6",
-    "@storybook/react": "^8.0.0-beta.6",
-    "@storybook/theming": "^8.0.0-beta.6",
+    "@storybook/addon-docs": "^7.6.5",
+    "@storybook/addon-essentials": "^7.6.5",
+    "@storybook/addon-interactions": "^7.6.5",
+    "@storybook/addon-links": "^7.6.5",
+    "@storybook/addon-mdx-gfm": "^7.6.5",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.5",
+    "@storybook/manager-api": "^7.6.8",
+    "@storybook/nextjs": "^7.6.5",
+    "@storybook/react": "^7.6.5",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^7.6.8",
     "@types/react": "^18.2.0",
     "@types/vhtml": "^2.2.4",
     "autoprefixer": "^10.4.15",
-    "chromatic": "^11.0.0",
+    "chromatic": "^7.6.0",
     "eslint": "^8.39.0",
-    "eslint-config-next": "^14.1.0",
+    "eslint-config-next": "^13.4.4",
     "eslint-plugin-storybook": "^0.6.15",
     "msw": "1.3.2",
     "next-sitemap": "^4.2.2",
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
-    "storybook": "^8.0.0-beta.6",
+    "storybook": "^7.6.5",
     "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
   }
