--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "postcss": "^8.4.29",
     "prettier": "^3.0.3",
     "storybook": "^7.6.5",
+    "storybook-addon-designs": "^6.3.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.0.4"
   }
